--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="icon" href="img/icons/icon.svg">
     <title><%= htmlWebpackPlugin.options.title %></title>
+    
+    <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css" /> 
   </head>
   <body>
     <noscript>
@@ -13,5 +15,6 @@
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
+    <script src="https://www.youtube.com/iframe_api"></script>
   </body>
 </html>
